Add get gif and weather data features

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<script module defer src="script.js"></script>
+<script type="module" defer src="script.js"></script>
 <title>Weather App</title>
 </head>
 <body>
+  <div class="weather-container">
+    <p class="weather-description">
+    </p>
+  </div>
   <div class="search-container">
       <input type="search" name="location" id="location" placeholder="enter the location name">
       <button type="submit">Search for weather</button>
