Edit index.html and script.js

--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 <title>Weather App</title>
 </head>
 <body>
-  <div class="weather-container">
-    <p class="weather-description">
-    </p>
-  </div>
-  <div class="search-container">
-      <input type="search" name="location" id="location" placeholder="enter the location name">
-      <button type="submit">Search for weather</button>
-  </div>
-  <div class="img-container">
+  <weather-data></weather-data>
+ 
+  <!-- <div class="img-container">
     <img src="https://media2.giphy.com/media/jNyRowsA00iO3b4TuC/200.gif?cid=d432d5adsu0p7vqrf9iug8px53oz2wnv0w2u3xsuobtpuxci&ep=v1_gifs_search&rid=200.gif&ct=g" alt="weather gif">
-  </div> 
+  </div>  -->
 </body>
 </html>
